# bmstu-iu7-oop

./: .gitignore  .gitmodules  README.md  oop5.drawio  package-lock.json  package.json  tsconfig.json
Lab03/: Lab03.pro  config.yml  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.yml  oop3-uml.drawio  temp.yml
Lab03/engine/: EngineCreator.cpp  EngineCreator.h
Lab03/engine/Command/: Command.h  Commands.cpp  Commands.h
Lab03/engine/Engine/: Engine.cpp  Engine.h  QtEngine.cpp  QtEngine.h
Lab03/engine/EngineCreator/: EngineCreator.cpp  EngineCreator.h
Lab03/engine/EngineSolution/: EngineCreator.h  EngineSolution.cpp  EngineSolution.h
Lab03/engine/Exception/: Exceptions.h
Lab03/engine/ModelData/: Edge.h  ModelData.cpp  ModelData.h  Point.h
Lab03/engine/Object/: Camera.h  Model.h  Object.h  ObjectIterator.cpp  ObjectIterator.h  SceneTree.h
Lab03/engine/ObjectBuilder/: ObjectBuilder.h
Lab03/engine/ObjectLoader/: ObjectLoader.h
Lab03/engine/ObjectLoaderSolution/: ObjectLoaderSolution.cpp  ObjectLoaderSolution.h
Lab03/engine/ObjectManager/: ObjectManager.h  SceneManager.cpp  SceneManager.h
Lab03/engine/ObjectMediator/: ObjectMediator.h  SceneMediator.cpp  SceneMediator.h
Lab03/engine/ObjectSaver/: ObjectSaver.h
Lab03/engine/ObjectSaverSolution/: ObjectSaverSolution.cpp  ObjectSaverSolution.h
Lab03/engine/SceneMediator/: SceneMediator.cpp  SceneMediator.h
Lab03/engine/Screen/: Screen.cpp  Screen.h
Lab03/engine/ScreenCreator/: ScreenCreator.h
Lab03/engine/Visitor/: Visitor.cpp  (+3 more)
Lab03/qt/: QtEngine.cpp  QtEngine.h  QtEngineCreator.cpp  QtEngineCreator.h  QtRenderVisitor.cpp  QtRenderVisitor.h  QtSceneVisitor.cpp  QtSceneVisitor.h  QtScreenCreator.cpp  QtScreenCreator.h
Lab04/: Lab04.pro  cabin.cpp  cabin.h  constants.h  control_panel.cpp  control_panel.h  design.h  door.cpp  door.h  lift.cpp  lift.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  weight_sensor.cpp  weight_sensor.h
lab01/: bindings.cpp  index.html  newtonraphson.cpp  newtonraphson.hpp  rollup.config.js  script.ts  task_kg.md
lab01/config/: build.js
lab_01/: cube.txt  draw.cpp  draw.hpp  errors.cpp  errors.hpp  lab_01.pro  lines.cpp  lines.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.hpp  model_manager.cpp  model_manager.hpp  vectors.cpp  vectors.hpp
lab_02/: .gitignore  CMakeLists.txt  Makefile  test.sh
lab_02/inc/: const_iterator.h  const_iterator.hpp  container.h  container.hpp  exception.h  exception.hpp  exceptions.h  format.h  format.hpp  iterator.h  iterator.hpp  vector.h  vector.hpp
lab_02/src/: container.cpp
lab_02/unit_tests/: main.cpp  unit_main.cpp  unit_vector.cpp
lab_03/: index.html  rollup.config.js
lab_03/engine/: CMakeLists.txt  build-release.sh  build.sh
lab_03/engine/inc/: manager.h
lab_03/engine/src/: bindings.cpp  manager.cpp
lab_03/engine/src/Commands/: Command.h  Commands.cpp  Commands.h
lab_03/engine/src/Engine/: Engine.cpp  Engine.h  WebGLEngine.cpp  WebGLEngine.h
lab_03/engine/src/EngineCreator/: EngineCreator.cpp  EngineCreator.h
lab_03/engine/src/Exception/: Exception.cpp  Exception.h  Exceptions.h
lab_03/engine/src/NodeLoaderSolution/: NodeLoaderSolution.h
lab_03/engine/src/NodeSaverSolution/: NodeSaverSolution.h
lab_03/engine/src/Nodes/: Node.h  workspace.code-workspace
lab_03/engine/src/Nodes/Camera/: Camera.h
lab_03/engine/src/Nodes/Model/: Model.h
lab_03/engine/src/Nodes/SceneTree/: SceneTree.h
lab_03/engine/src/Screen/: Screen.cpp  Screen.h
lab_03/engine/src/ScreenCreator/: ScreenCreator.h  WebGLScreenCreator.cpp  WebGLScreenCreator.h
lab_03/engine/src/ScreenManager/: ScreenIterator.h  ScreenManager.cpp  ScreenManager.h
lab_03/engine/src/Vector/: Vector.h
lab_03/engine/src/Visitor/: RenderVisitor.h  Visitor.h  WebGLRenderVisitor.cpp  WebGLRenderVisitor.h
lab_03/src/: index.ts
(+31 files in other folders)
